<resources>
    <string name="API_ERROR_ACCESS_DENIED">"You don't have permission to access that record."</string>
    <string name="API_ERROR_ACCOUNT_DEACTIVATED">Your account was deactivated.</string>
    <string name="API_ERROR_ADDRESS_BOOK_NOT_FOUND">The address book could not be found.</string>
    <string name="API_ERROR_AVATAR_INVALID">The avatar URL provided is invalid.</string>
    <string name="API_ERROR_BAD_CREDENTIALS">That username or password is incorrect.</string>
    <string name="API_ERROR_CANT_FLAG_SELF">"You can't report yourself."</string>
    <string name="API_ERROR_CANT_FOLLOW_SELF">"You can't follow yourself dawg"</string>
    <string name="API_ERROR_CAPTCHA_REQUIRED">Need to perform captcha.</string>
    <string name="API_ERROR_COMMENT_INVALID_LENGTH">Your comment must be 140 characters or less.</string>
    <string name="API_ERROR_DESCRIPTION_INVALID_LENGTH">Your caption must be 140 characters or less.</string>
    <string name="API_ERROR_DUPLICATE_MENTIONS">You cannot mention the same user twice.</string>
    <string name="API_ERROR_EMAIL_INVALID">That email address looks invalid. Please double check and try again.</string>
    <string name="API_ERROR_EMAIL_IN_USE">That email address is already in use.</string>
    <string name="API_ERROR_EXPIRED_SESSION">Your session has expired.</string>
    <string name="API_ERROR_FACEBOOK_FF_DISABLED">Vine is not authorized to make this Facebook request.</string>
    <string name="API_ERROR_FACEBOOK_NOT_AUTHORIZED">Not authorized to post to Facebook</string>
    <string name="API_ERROR_FSQUARE_VENUE_INVALID">That Foursquare venue is invalid.</string>
    <string name="API_ERROR_INVALID_ARGUMENT">Invalid argument.</string>
    <string name="API_ERROR_INVALID_ERROR_CODE">Invalid or unknown error code.</string>
    <string name="API_ERROR_INVALID_SESSION">That session key is invalid.</string>
    <string name="API_ERROR_LOCATION_INVALID_LENGTH">Your location must be 32 characters or less.</string>
    <string name="API_ERROR_MISSING_REQUIRED_FIELD">A required parameter is missing.</string>
    <string name="API_ERROR_NON_INTEGER_VALUE">Argument must be an integer.</string>
    <string name="API_ERROR_NOTIFICATION_REFERENCES_SELF">A notification cannot reference itself.</string>
    <string name="API_ERROR_NO_ARGUMENTS_PROVIDED">Arguments were expected but none were provided.</string>
    <string name="API_ERROR_ORPHANED_USER_ACCOUNT">"Without an email address or Twitter account, you won't be able to log in."</string>
    <string name="API_ERROR_PASSWORD_INVALID">Please use a password between 8 and 20 characters, with at least one number.</string>
    <string name="API_ERROR_PASSWORD_RESET_TOKEN_EXPIRED">Your password reset token has expired.</string>
    <string name="API_ERROR_PHONE_INVALID">That phone number looks invalid. Please double check and try again.</string>
    <string name="API_ERROR_RECORD_DOES_NOT_EXIST">That record does not exist.</string>
    <string name="API_ERROR_RELATIONSHIP_REQUIRES_ACTION">An action must be specified to modify the relationship.</string>
    <string name="API_ERROR_REQUIRES_ADMIN_LOGIN">You must be an admin to perform that action.</string>
    <string name="API_ERROR_REQUIRES_LOGIN">You must be logged in to perform this action.</string>
    <string name="API_ERROR_TOKEN_EXPIRED">Your confirmation token has expired.</string>
    <string name="API_ERROR_TOO_MANY_MENTIONS">Your caption cannot contain more than 10 user mentions.</string>
    <string name="API_ERROR_TWITTER_NAME_IN_USE">That Twitter account is already in use.</string>
    <string name="API_ERROR_TWITTER_NOT_AUTHORIZED">Not authorized to post to Twitter</string>
    <string name="API_ERROR_TWITTER_WRONG_ACCOUNT">Your Vine account is already linked to another Twitter account.</string>
    <string name="API_ERROR_UNKNOWN_ERROR">An unknown error occurred.</string>
    <string name="API_ERROR_UNSUPPORTED_METHOD">That method is unsupported.</string>
    <string name="API_ERROR_USERNAME_INVALID_CHARACTERS">Your username can only contain alphanumeric characters and an underscore.</string>
    <string name="API_ERROR_USERNAME_INVALID_LENGTH">Please use a username between 3 and 32 characters.</string>
    <string name="API_ERROR_USERNAME_IN_USE">That username is already in use.</string>
    <string name="API_ERROR_USER_DESCRIPTION_INVALID_LENGTH">Your profile description must be 160 characters or less.</string>
    <string name="API_ERROR_VERIFY_CONTACT_MISMATCH">Your contact details have changed. Please try again.</string>
    <string name="API_ERROR_VERIFY_PHONE_WRONG_USER">You may not confirm the phone for a different user.</string>
    <string name="API_ERROR_VERIFY_TOKEN_NOT_FOUND">"You entered the code incorrectly.
Please try again."</string>
    <string name="API_ERROR_VIDEOURL_INVALID">The URL provided for the video is invalid.</string>
    <string name="NUX_are_you_sure_you_want_to_skip">Are you sure you want to skip this chance to personalize Vine?</string>
    <string name="NUX_because_you_like">Because you like %1$s</string>
    <string name="NUX_channel_like_confirm">Thanks! Your Home feed will now include a few hand-picked %1$s Vines.</string>
    <string name="NUX_channels_on_vine">Channels on Vine</string>
    <string name="NUX_find_your_friends">Find your friends</string>
    <string name="NUX_go_back">Go back</string>
    <string name="NUX_number_friends_on_vine">%1$d friends on Vine</string>
    <string name="NUX_tap_like_channel">Tap Like to see a few daily Vines from this channel in your Home feed.</string>
    <string name="NUX_what_do_you_like">What do you like?</string>
    <string name="NUX_yes_im_sure">Yes, I’m sure</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="accept_failed">Unable to accept</string>
    <string name="activity_comment">\"%1$s\" commented on your post: %2$s</string>
    <string name="activity_empty">"You don't have any activity yet."</string>
    <string name="activity_error">An error occurred while trying to update Activity. Please try again later.</string>
    <string name="activity_follow">\"%1$s\" is now following you!</string>
    <string name="activity_like">\"%1$s\" liked your post.</string>
    <string name="activity_notification_big_title">New Vine Activity</string>
    <string name="activity_notification_subtext">Tap to view all Vine activity.</string>
    <string name="add">Add</string>
    <string name="add_capture_widget">Record more quickly! You can instantly jump to the Vine camera right from your home screen using the new capture widget.</string>
    <string name="add_capture_widget_title">Fast Capture Widget</string>
    <string name="add_to_channel">Add to a channel</string>
    <string name="add_widget">Add Widget</string>
    <string name="all_clips_deleted">All clips have been deleted</string>
    <string name="almost_done">"Sending post to Vine's servers"</string>
    <string name="amazon_bucket">vines</string>
    <string name="amazon_s3">https://s3.amazonaws.com</string>
    <string name="and_x_others_plural">&amp; %d others</string>
    <string name="and_x_others_single">&amp; 1 other</string>
    <string name="app_name">Vine</string>
    <string name="app_secret" />
    <string name="attribution_url">https://vine.co/android-attribution</string>
    <string name="authenticator_activity_title">Sign in</string>
    <string name="be_the_first">Be the first to like this post</string>
    <string name="block_person">Block person</string>
    <string name="camera_failed_to_open">Camera cannot be accessed because it is being used by another application right now. Restart the app or your phone may resolve this issue.</string>
    <string name="capture">Capture</string>
    <string name="content_controls_title">Your content</string>
    <string name="email_hint">Enter email</string>
    <string name="find_friends">Find people</string>
    <string name="gingerbread_notif_button">Okay, got it!</string>
    <string name="gingerbread_notif_desc">"We've made a special version
of Vine for you to discover and 
explore videos from our awesome 
community. Tap videos to play."</string>
    <string name="gingerbread_notif_title">"Your device does not
 support making videos."</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint">at least 8 characters</string>
    <string name="login_username">Email</string>
    <string name="login_username_hint">example@abc.com</string>
    <string name="login_xauth_password_hint">Twitter password</string>
    <string name="login_xauth_tos_line_1">By pressing next, you agree to the</string>
    <string name="login_xauth_username_hint">Twitter username or email</string>
    <string name="logout">Logout</string>
    <string name="messages_title">Messages</string>
    <string name="mute">Mute audio</string>
    <string name="password_reset_text">"Enter your email below and we'll send you a link to reset your password."</string>
    <string name="password_reset_title">Reset Password</string>
    <string name="phone_hint">Enter phone</string>
    <string name="privacy">Privacy</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_attribution">Attribution</string>
    <string name="settings_deactivate_account">Deactivate account</string>
    <string name="settings_edition">Region</string>
    <string name="settings_email">Email</string>
    <string name="settings_friends">Friends</string>
    <string name="settings_invite_via_email">Invite via email</string>
    <string name="settings_invite_via_text">Invite via text</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_light">Light</string>
    <string name="settings_notifications_ringtone">Ringtone</string>
    <string name="settings_notifications_sound">Sound</string>
    <string name="settings_notifications_toggle">Notifications</string>
    <string name="settings_notifications_vibrate">Vibrate</string>
    <string name="settings_phone">Phone</string>
    <string name="settings_pp">Privacy policy</string>
    <string name="settings_profile">Profile color</string>
    <string name="settings_social_networks">Social Networks</string>
    <string name="settings_support">Support</string>
    <string name="settings_tos">Terms of service</string>
    <string name="sign_up_tos_line_1">By signing up, you agree to the</string>
    <string name="signup_name_hint">Your full name</string>
    <string name="signup_phone">Phone</string>
    <string name="signup_phone_hint">optional</string>
    <string name="signup_phone_instructions">"We'll send a text message to confirm your phone number if you add one. We'll also use the contact info you give us to help you connect with other Vine users."</string>
    <string name="twitter">Twitter</string>
    <string name="vine_caps">VINE</string>
</resources>