<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/VineNormal"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_horizontal" android:paddingLeft="@dimen/spacing_large" android:paddingRight="@dimen/spacing_large" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <co.vine.android.widget.TypefacesTextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_reset_text" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip">
        <EditText android:id="@id/email" android:hint="@string/login_username_hint" android:inputType="textEmailAddress" style="@style/EditText.SignIn" />
        <co.vine.android.widget.TypefacesTextView android:layout_width="wrap_content" android:text="@string/login_username" android:layout_alignBottom="@id/email" style="@style/SignInLabel" />
    </RelativeLayout>
</LinearLayout>